# WayLib

./: .gitignore  CMakeLists.txt  License  README.md  main.cpp
WayLib/include/CRTP/: inject_container_traits.hpp  inject_stream_traits.hpp
WayLib/include/Container/: DLList.hpp  ThreadSafeQueue.hpp
WayLib/include/Macro/: DefWayMacro.hpp  UndefWayMacro.hpp
WayLib/include/Util/: DataBuffer.hpp  Exceptions.hpp  FileSystem.hpp  OperatorExtension.hpp  RichException.hpp  RuntimeException.hpp  Stream.hpp  StreamUtil.hpp  StringLiteral.hpp  StringUtil.hpp  ThreadPool.hpp  TypeTraits.hpp
WayLib/include/Util/Range/: Range.hpp  RangeUtil.hpp
test/: test_deducing_this.cpp
